syntax = "proto3";
option java_multiple_files = true;
package com.roma.distr.grpc;

message AcceptRequestGrpc {
  int32 id = 1;
  int32 round = 2;
  int32 acceptedValue = 3;
}

message AcceptResponseGrpc {
  bool isAccepted = 1;
}

service AcceptService {
  rpc sendAccept(AcceptRequestGrpc) returns (AcceptResponseGrpc);
}
